--- a/solution/text-extractor/serverless.yml
+++ b/solution/text-extractor/serverless.yml
@@ -5,7 +5,8 @@ provider:
   ecr:
     images:
       appimage:
-        path: ./
+        path: ../.
+        file: text-extractor/Dockerfile
 
 functions:
   text-extractor:
