Add pytest-cov since i used it on my local

--- a/solution/backend/pyproject.toml
+++ b/solution/backend/pyproject.toml
@@ -10,6 +10,12 @@ select = ["E", "F", "G", "I", "S", "W", "ASYNC",
         ]
 ignore = ['S101']
 
+[tool.coverage.run]
+omit = [
+    "*/migrations/*",
+    "*/tests/*"
+    ]
+
 # Allow autofix for all enabled rules (when `--fix`) is provided.
 fixable = ["E", "F", "I", "W",
            "E201", "E202", "E203", "E211", "E231",
