--- a/solution/Makefile
+++ b/solution/Makefile
@@ -177,7 +177,10 @@ test.pytest:
 	DJANGO_SETTINGS_MODULE="cmcs_regulations.settings.test_settings" docker-compose -f docker-compose.yml up -d
 	docker-compose exec regulations pytest -vvv
 	docker-compose -f docker-compose.yml up -d  ## resets the django_settings_module to the default
-
+test.pytest.cov:
+	DJANGO_SETTINGS_MODULE="cmcs_regulations.settings.test_settings" docker-compose -f docker-compose.yml up -d
+	docker-compose exec regulations pytest --cov
+	docker-compose -f docker-compose.yml up -d  ## resets the django_settings_module to the default
 python.shell:
 	docker-compose exec regulations python manage.py shell
 
