--- a/solution/text-extractor/serverless.yml
+++ b/solution/text-extractor/serverless.yml
@@ -25,8 +25,12 @@ functions:
   text-extractor:
     image:
       name: appimage
+    timeout: 60
     events:
-      - http: GET text-extractor
+      - http:
+          method: get
+          path: /
+          async: true
 
 resources:
   Resources:
