--- a/.github/workflows/schedule-jira-sync.yml
+++ b/.github/workflows/schedule-jira-sync.yml
@@ -1,5 +1,7 @@
 name: Sync Security Hub findings and Jira issues
 on:
+  push:
+    branches: [ fix-slack-notification-erorr ]
   workflow_dispatch: # for testing and manual runs
   schedule:
     - cron: "25 1 * * *" # daily at 6:25 am EST
@@ -16,6 +18,7 @@ jobs:
       name: ${{ matrix.environment }}
     name: Run sync
     runs-on: ubuntu-20.04
+    if: github.event_name == 'push'
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
