--- a/solution/backend/serverless_functions/experimental_functions.yml
+++ b/solution/backend/serverless_functions/experimental_functions.yml
@@ -21,6 +21,11 @@ populate_content:
   timeout: 300
   layers:
     - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
+index_resources:
+  handler: index_resources.handler
+  timeout: 300
+  layers:
+    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
 create_database:
   environment:
     STAGE: ${self:custom.stage}
