--- a/solution/backend/serverless_functions/val_functions.yml
+++ b/solution/backend/serverless_functions/val_functions.yml
@@ -26,3 +26,8 @@ populate_content:
   layers:
     - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
   timeout: 300
+index_resources:
+  handler: index_resources.handler
+  timeout: 300
+  layers:
+    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
