EREGCSC-2251 Lambda for text extraction (#998)
* Add base container

* Add auto reloader

* Add lambda-proxy server

* Improve response handling

* Successfully deploy test code

* Add initial text extractor code

* Add file backends and extractors

* Add type hints

* Improve modules

* Add result upload

* Functional code for S3 uploading

* Add README

* Edit README

* Edit README

* Edit README

* Edit README

* Add tests

* Update serverless and github actions

* Fix serverless

* Add more makefile commands

* Add prod deploy to github actions

* Fix flake8 errors

* Increase timeout to max

* Remove x86 dependency

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -57,6 +57,11 @@ watch-eregs-main:
 	cd ui/regulations/eregs-component-lib; \
 		(trap 'kill 0' SIGINT; node watch-dist.js);
 
+.PHONY: watch-text-extractor
+watch-text-extractor: ## Watch text extractor lambda for changes
+watch-text-extractor:
+	watchfiles --filter python 'make text-extractor.restart'
+
 .PHONY: watch
 watch: ## watch non-SPA pages for changes
 watch:
@@ -65,7 +70,7 @@ watch:
 .PHONY: watch-all
 watch-all: ## watch everything for changes
 watch-all:
-	${MAKE} -j4 watch-css watch-component-lib watch-eregs-main watch-spa
+	${MAKE} -j4 watch-css watch-component-lib watch-eregs-main watch-spa watch-text-extractor
 
 .PHONY: storybook
 storybook: ## Run storybook for regulations
@@ -192,6 +197,21 @@ python.migrate:
 
 local.seed:
 	docker-compose exec regulations python manage.py populateseeddata
+
+text-extractor:
+	docker-compose up -d --build text-extractor
+
+text-extractor.stop:
+	docker-compose stop text-extractor
+
+text-extractor.start:
+	docker-compose start text-extractor
+
+text-extractor.restart:
+	make text-extractor.stop; make text-extractor.start
+
+text-extractor.test:
+	docker-compose exec text-extractor sh -c 'cd app; python -m unittest'
 
 # Do not change the order of these objects.  In some cases it matters
 resource_objects = resources.abstractcategory resources.category resources.subcategory resources.abstractlocation resources.section resources.subpart resources.federalregisterdocumentgroup resources.resourcesconfiguration resources.abstractresource resources.federalregisterdocument resources.supplementalcontent
