Eregcsc 2263 fts on uploaded content (#988)
* EREGCSC-2263 FTS on resources

* update pytest from old failing test

* flake8 fix

* add fr doc

* Set up unit test for search

* clean up code of print

* Add pytest-cov since i used it on my local

* fix pyproject.toml

* add category details to serializer

* remove old migrations

* Clean up migrations

* remove deleting the index

* remove vector

* remove sup and fr from file search

* remove migrations

* new attempt at issue workaround

* tretry

* lowered fixture amount

* lower fr docs and sup to only 100 each

* update unit test

* add migration for seed data

* add content type and content id for edit

* update migration and update deploy-experimental

* fix test

* fix seed data

* have data index as soon as seeded

* removed unused funciton

* fix name of content_type

* moved logic to populate index

* fixing signals

* linter fix

* remove delete signal

* remove post save signal

* try this

* no contentindex

* seed data for contentindex

* fix pagination

* linter fix

* adding sleep for seeding

* remove/addvector column from index table seed

* linter fix

* quotes around vector_column  for drop

* move sql command

* specifiy database in curosr

* specify connection to default database for seed

* dfd

* add public to raw sql

* lets try raw delete

* raw delete

* linter fix

* add to index used instead of seed data

* df

* add handler for indexing

* linter fix

* linter fix

* limit seed data to 1000 of sup or fed

* refactored some functions,

* refactor index resources

* d

* cypress update and main update

* move serielizers that are common to common

* fixed bug in catdetails caused test to fail

* set default category details to true

* edit getsearchgovresources cypress

* linter fix

* update api call for search page

* remove populate content from dev and v

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -161,6 +161,7 @@ jobs:
           serverless invoke --config ./serverless-experimental.yml --function reg_core_migrate --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function create_su --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function populate_content --stage dev${PR}
+          serverless invoke --config ./serverless-experimental.yml --function index_resources --stage dev${PR}
           echo "url=$(cat output.log | grep -m1 'ANY -' | cut -c 9-)" >> $GITHUB_OUTPUT
           popd
   test-python:
