--- a/solution/backend/pyproject.toml
+++ b/solution/backend/pyproject.toml
@@ -1,6 +1,13 @@
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "cmcs_regulations.settings.test_settings"
 
+[tool.coverage.run]
+omit = [
+    "*/migrations/*",
+    "*/tests/*"
+]
+
+
 [tool.ruff]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
 select = ["E", "F", "G", "I", "S", "W", "ASYNC",
