--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -96,26 +96,13 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
           aws-region: us-east-1
-      # Deploy the text extractor lambda to AWS
-      - name: Deploy text extractor lambda
-        id: deploy-text-extractor
-        if: success() && steps.findPr.outputs.number
-        env:
-          PR: ${{ steps.findPr.outputs.pr }}
-          RUN_ID: ${{ github.run_id }}
-        run: |
-          pushd solution/text-extractor
-          npm install serverless -g
-          npm install
-          serverless deploy --stage dev${PR}
-          popd
   deploy-django:
     environment:
       name: "dev"
     outputs:
       url: ${{ steps.deploy-regulations-site-server.outputs.url }}
     runs-on: ubuntu-20.04
-    needs: [deploy-static, deploy-text-extractor]
+    needs: [deploy-static]
     steps:
       # Checkout the code
       - name: Checkout
