Add permissions for PDF extraction

--- a/solution/text-extractor/serverless.yml
+++ b/solution/text-extractor/serverless.yml
@@ -57,6 +57,14 @@ resources:
         ManagedPolicyArns:
           - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
         Policies:
+          - PolicyName: TextDetectionPolicy
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action: "textract:DetectDocumentText"
+                  Resource: "*"
+                  Sid: "DetectDocumentText"
           - PolicyName: StorageBucketPolicy
             PolicyDocument:
               Version: '2012-10-17'
