--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -17,6 +17,7 @@
     "rules": {
         "eqeqeq": "off",
         "no-console": ["error", { "allow": ["warn", "error"] }],
+        "no-nested-ternary": "off",
         "vue/order-in-components": "off",
         "vue/no-unsupported-features": [
             "error",
