EREGCSC-2253 Extract text from PDFs (scanned & text) via Textract (#1006)
* Add base container

* Add auto reloader

* Add lambda-proxy server

* Improve response handling

* Successfully deploy test code

* Add initial text extractor code

* Add file backends and extractors

* Add type hints

* Improve modules

* Add result upload

* Functional code for S3 uploading

* Add README

* Edit README

* Edit README

* Edit README

* Edit README

* Add tests

* Update serverless and github actions

* Fix serverless

* Add more makefile commands

* Add prod deploy to github actions

* Fix flake8 errors

* Increase timeout to max

* Add pdf text extractor

* Remove x86 dependency

* Hopefully fix key handling for local vs deploy

* Add permissions for PDF extraction

* Add remove action

* Remove api gateway

* Add pdf tests

* Update serverless to point to lambda ARN

* Deploy lambda again

* Remove environment variable

* Add dependency back to github action

--- a/solution/text-extractor/Dockerfile
+++ b/solution/text-extractor/Dockerfile
@@ -6,9 +6,6 @@ ENV EXTERNAL_PORT="8000"
 ENV PROXY_PARAMS=""
 ENV STARTUP_CMD="app.text_extractor.handler"
 
-# Install binary dependencies
-RUN yum install file-libs
-
 # Copy lambda-proxy
 COPY lambda-proxy /proxy
 
@@ -18,6 +15,9 @@ RUN pip install -r /proxy/requirements.txt
 # Copy function code
 # Will be overridden locally
 COPY text-extractor ${LAMBDA_TASK_ROOT}/app
+
+# Install binary dependencies
+RUN xargs yum install -y < app/packages.txt
 
 # Install the required packages
 RUN pip install -r app/requirements.txt
