--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -25,6 +25,7 @@
                 "version": "^2.7.0",
                 "ignores": []
             }
-        ]
+        ],
+        "vue/no-v-html": "off"
     }
 }
