--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -1,4 +1,8 @@
 version: '3'
+networks:
+  eregs:
+    external: false
+    name: eregs
 services:
   db:
     image: postgres:15.2
@@ -10,6 +14,8 @@ services:
       - 5432:5432
     volumes:
       - eregs-data:/var/lib/postgresql/data
+    networks:
+      - eregs
   regulations:
     build:
       context: .
@@ -33,6 +39,8 @@ services:
     links:
       - db
       - text-extractor
+    networks:
+      - eregs
   static-assets:
     image: nginx
     ports:
@@ -40,6 +48,8 @@ services:
     volumes:
       - ./backend/nginx/config/static-assets/nginx_fonts.conf:/etc/nginx/conf.d/default.conf
       - ./static-assets/regulations:/usr/share/nginx/html
+    networks:
+      - eregs
   text-extractor:
     build:
       context: .
@@ -53,6 +63,8 @@ services:
       - EREGS_API_URL_V3=${EREGS_API_URL_V3:-}
     volumes:
       - ./text-extractor:/var/task/app
+    networks:
+      - eregs
 volumes:
   eregs-data:
 
