EREGCSC-2289 -- Enable Display of Public Docs in Policy Repo (#1005)
* feat: first pass at policy repo search updates

* feat: further refinement to content-search results

* feat: first opinionated pass at main policy repository

* feat: label tweaks

* feat: style anchor differently if search result or not

* feat: don't fetch DocList if there are no params

* feat: add cms design system choice list

* feat: watch v-model changes to update route

* feat: all or none selected logic

* feat: hook up doc types to API request

* feat: doc type label update; result item parts update

* feat: small subject chip style update

* feat: change checkbox color to eRegs Design System blue

* feat: allow 'all' type param

* feat: handle 'all' type param in policy repository view

* feat: sanitize watched query params before acting on them

* fix: don't set page when clearing search input

* test: update getRequestParams unit tests

* chore: cleanup

* fix: do not fetch policy docs on page load if type=all

* test: update policy docs fixture and intercept the new endpoint

* test: minimum viable e2e test coverage

--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -17,6 +17,7 @@
     "rules": {
         "eqeqeq": "off",
         "no-console": ["error", { "allow": ["warn", "error"] }],
+        "no-nested-ternary": "off",
         "vue/order-in-components": "off",
         "vue/no-unsupported-features": [
             "error",
@@ -24,6 +25,7 @@
                 "version": "^2.7.0",
                 "ignores": []
             }
-        ]
+        ],
+        "vue/no-v-html": "off"
     }
 }
