--- a/solution/static-assets/requirements.txt
+++ b/solution/static-assets/requirements.txt
@@ -3,12 +3,11 @@ Werkzeug==0.15.5
 zappa-django-utils==0.4.1
 boto3
 django-debug-toolbar
-django>=3.1,<4
+django==4.2
 requests
 djangorestframework
 psycopg2-binary
 django-solo
-django-opensearch-dsl
 python-dateutil~=2.8.2
 django-cors-headers
 drf-spectacular==0.24.2
