fixed some issues

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -99,9 +99,9 @@ jobs:
       # Deploy the text extractor lambda to AWS
       - name: Deploy text extractor lambda
         id: deploy-text-extractor
-        i#f: success() && steps.findPr.outputs.number
+        if: success() && steps.findPr.outputs.number
         env:
-          PR: $#{{ steps.findPr.outputs.pr }}
+          PR: ${{ steps.findPr.outputs.pr }}
           RUN_ID: $#{{ github.run_id }}
         run: |
           pushd solution/text-extractor
