--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Configure AWS credentials for GitHub Actions
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: $#{{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
           aws-region: us-east-1
       # Deploy the text extractor lambda to AWS
       - name: Deploy text extractor lambda
@@ -102,7 +102,7 @@ jobs:
         if: success() && steps.findPr.outputs.number
         env:
           PR: ${{ steps.findPr.outputs.pr }}
-          RUN_ID: $#{{ github.run_id }}
+          RUN_ID: ${{ github.run_id }}
         run: |
           pushd solution/text-extractor
           npm install serverless -g
@@ -115,7 +115,7 @@ jobs:
     outputs:
       url: ${{ steps.deploy-regulations-site-server.outputs.url }}
     runs-on: ubuntu-20.04
-    needs: [deploy-static, ] #[deploy-static, deploy-text-extractor]
+    needs: [deploy-static, deploy-text-extractor]
     steps:
       # Checkout the code
       - name: Checkout
