--- a/solution/static-assets/requirements.txt
+++ b/solution/static-assets/requirements.txt
@@ -3,7 +3,7 @@ Werkzeug==0.15.5
 zappa-django-utils==0.4.1
 boto3
 django-debug-toolbar
-django==4.2
+django>=3.1,<4
 requests
 djangorestframework
 psycopg2-binary
