--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -174,8 +174,8 @@ jobs:
       DB_USER: eregs
       DB_PASSWORD: sgere
       DB_PORT: 5432
-      HTTP_AUTH_USER: eregs
-      HTTP_AUTH_PASSWORD: password
+      HTTP_AUTH_USER: ${{ secrets.HTTP_AUTH_USER }}
+      HTTP_AUTH_PASSWORD: ${{ secrets.HTTP_AUTH_PASSWORD }}
     services:
       postgres:
         image: postgres
