add jwt to functions

--- a/solution/Dockerfile.template
+++ b/solution/Dockerfile.template
@@ -28,5 +28,8 @@ ENV FILE_MANAGER_AWS_BUCKET_NAME=""
 ENV TEXTRACT_ARN=''
 ENV TEXTRACT_KEY_ID = ''
 ENV TEXTRACT_SECRET_KEY = ''
+ENV SERVER_USER=""
+ENV SERVER_PASSWORD=""
+
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
