--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -155,6 +155,7 @@ jobs:
         run: |
           pushd solution/backend
           npm install serverless -g
+          npm install serverless-s3-remover
           npm install
           serverless deploy --config ./serverless-experimental.yml --stage dev${PR} | tee output.log
           serverless invoke --config ./serverless-experimental.yml --function create_database --stage dev${PR}
