update lambda permissions

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -175,11 +175,13 @@ resources:
                      - "s3:PutObject"
                      - "s3:GetObject"
                      - "s3:DeleteObject"
+                     - "s3:ListBucket"
                    Resource:
                      - Fn::Join:
                        - ""
                        - - "arn:aws:s3:::"
                          - "Ref" : "ServerlessDeploymentBucket"
+                     - "arn:aws:s3:::file-repo-eregs-${self:custom.stage}"
                      - "arn:aws:s3:::file-repo-eregs-${self:custom.stage}/*"
 
 plugins:
