--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -60,7 +60,8 @@
     "storybook-addon-sass-postcss": "^0.1.3",
     "vitest": "^0.31.0",
     "webpack": "^5.76.0",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "^3.6.2",
+    "vite": "^4.5"
   },
   "msw": {
     "workerDirectory": "msw"
