EREGCSC-2325 Enable text extractor to work on EREGS (#1021)
* EREGCSC-2317 Update index endpoint

* add authentication to endpoint

* add not logged in check

* add env for pytest

* linter error

* initial commit

* remove print statment

* Clean up print and update description on endpoint

* http auth user and password to secrets

* update deploy.yml for pytets variables

* Set use_local_textract to true

* set text extractor http auth

* enable jwt for textextractor

* add jwt to functions

* Add text-extractor access through admin

* cleaned up linter stuff

* fix authentication issue with jwt

* linter fix

* linter fix

* removed print statements

* deploy text extractor

* update needs step for deploy django

* Adding docker file back in.

* add arn environment variables

* fix bug with settings not properly named

* fix s3 environment variable issues

* refactoring for establishing client

* update serverless

* smoke test

* fd

* g

* df

* remove smoketest

* tell textract to not use lambda if possible

* Changed how populated content displays

* Update quotes and removed else statement

* fix typo

--- a/solution/static-assets/requirements.txt
+++ b/solution/static-assets/requirements.txt
@@ -8,7 +8,6 @@ requests
 djangorestframework
 psycopg2-binary
 django-solo
-django-opensearch-dsl
 python-dateutil~=2.8.2
 django-cors-headers
 drf-spectacular==0.24.2
@@ -25,3 +24,4 @@ mozilla-django-oidc
 boto3
 django-storages
 pytest-cov
+djangorestframework_simplejwt
