--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -45,7 +45,8 @@ provider:
     OIDC_OP_USER_ENDPOINT: ${ssm:/eregulations/oidc/user_endpoint}
     DEPLOY_NUMBER: ${env:RUN_ID}
     EUA_FEATUREFLAG: ${ssm:/eregulations/eua/featureflag}
-    #TEXT_EXTRACTOR_ARN: ${self:custom.settings.text_extractor_arn}
+    TEXT_EXTRACTOR_ARN: ${self:custom.settings.text_extractor_arn}
+    TEXTRACT_ARN: ${ssm:/eregulations/textextractor-arn}
   vpc:
     securityGroupIds:
       - ${ssm:/eregulations/aws/securitygroupid}
@@ -78,7 +79,7 @@ custom:
     DB_NAME: ${self:custom.stage}
     USERNAME: eregsuser
     ALLOWED_HOST: '.amazonaws.com'
-    #text_extractor_arn: ${cf:text-extractor-${self:custom.stage}.TextDashextractorLambdaFunctionQualifiedArn}
+    text_extractor_arn: ${cf:text-extractor-${self:custom.stage}.TextDashextractorLambdaFunctionQualifiedArn}
   cloudfrontInvalidate:
     - distributionId: ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId}
       items:
@@ -182,6 +183,11 @@ resources:
                        - - "arn:aws:s3:::"
                          - "Ref" : "ServerlessDeploymentBucket"
                      - "arn:aws:s3:::file-repo-eregs-${self:custom.stage}/*"
+                -  Effect: "Allow"
+                   Action:
+                     - "lambda:InvokeFunction"
+                   Resource:
+                     - "${self:custom.settings.text_extractor_arn}"       
 
 plugins:
   - serverless-wsgi
