--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -93,6 +93,35 @@ functions: ${file(serverless_functions/${self:custom.environment}_functions.yml)
 
 resources:
   Resources:
+    BackupRole:
+      Type: "AWS::IAM::Role"
+      Properties:
+        RoleName: SampleBackupRole
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: "Allow"
+              Principal:
+                Service:
+                  - "backup.amazonaws.com"
+              Action:
+                - "sts:AssumeRole"
+        ManagedPolicyArns:
+          - "arn:aws:iam::aws:policy/service-role/AWSBackupServiceRolePolicyForBackup"
+    BackupVault:
+      Type: "AWS::Backup::BackupVault"
+      Properties:
+        BackupVaultName: "SampleBackupVault"
+
+    BackupPlan:
+      Type: "AWS::Backup::BackupPlan"
+      Properties:
+        BackupPlan:
+          BackupPlanName: "SampleBackupVault"
+          BackupPlanRule:
+            - RuleName: "RuleForDailyBackups"
+              TargetBackupVault: !Ref BackupVault
+              ScheduleExpression: "cron(0 5 ? * * *)"
     MyS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
@@ -106,6 +135,7 @@ resources:
           BlockPublicPolicy: true
           IgnorePublicAcls: true
           RestrictPublicBuckets: true
+        VersioningConfiguration: Enabled
         CorsConfiguration:
           CorsRules:
             -
@@ -118,6 +148,14 @@ resources:
                 - HEAD
               MaxAge: 3000
     WAFRegionalWebACL: ${file(aws_resources/waf.yml):WAFRegionalWebACL}
+    BackupSelection:
+      Type: "AWS::Backup::BackupSelection"
+      Properties:
+        BackupSelection:
+          SelectionName: SampleBackupSelection
+          IamRoleArn: !GetAtt BackupRole.Arn
+          Resources: !GetAtt MyS3Bucket:.Arn
+        BackupPlanId: !Ref BackupPlan
     LambdaFunctionRole:
       Type: AWS::IAM::Role
       Properties:
