fix for object on verisoning configuration

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -135,7 +135,8 @@ resources:
           BlockPublicPolicy: true
           IgnorePublicAcls: true
           RestrictPublicBuckets: true
-        VersioningConfiguration: Enabled
+        VersioningConfiguration: 
+          Status: Enabled
         CorsConfiguration:
           CorsRules:
             -
