Eregcsc 2195 s3 bucket removal (#1033)
* Add s3 bucket removal

* add to remove experimental

* update deploy experimental

* update bucketname reference

* Try this

* remove broken serverless variable

* add lambda to delte bucket contnets

* fix spelling on bucket

* update lambda permissions

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -88,7 +88,6 @@ custom:
   associateWaf:
     name: APIGateway-eregs-allow-usa-plus-territories-${self:custom.stage}
     version: V2
-
 functions: ${file(serverless_functions/${self:custom.environment}_functions.yml)}
 
 resources:
@@ -178,11 +177,13 @@ resources:
                      - "s3:PutObject"
                      - "s3:GetObject"
                      - "s3:DeleteObject"
+                     - "s3:ListBucket"
                    Resource:
                      - Fn::Join:
                        - ""
                        - - "arn:aws:s3:::"
                          - "Ref" : "ServerlessDeploymentBucket"
+                     - "arn:aws:s3:::file-repo-eregs-${self:custom.stage}"
                      - "arn:aws:s3:::file-repo-eregs-${self:custom.stage}/*"
                 -  Effect: "Allow"
                    Action:
