fix ruff errors

--- a/solution/Dockerfile.template
+++ b/solution/Dockerfile.template
@@ -31,5 +31,9 @@ ENV TEXTRACT_SECRET_KEY = ''
 ENV SERVER_USER=""
 ENV SERVER_PASSWORD=""
 
+# For testing
+ENV TEST_USER=""
+ENV TEST_PASSWORD=""
+
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
