--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -154,8 +154,10 @@ jobs:
       - name: Get test user credentials
         uses: dkershner6/aws-ssm-getparameters-action@v1
         with:
-            parameterPairs: "/eregulations/http/test_user = CYPRESS_TEST_USERNAME,
-                /eregulations/http/test_password = CYPRESS_TEST_PASSWORD"
+            parameterPairs: "/eregulations/http/user = CYPRESS_TEST_USERNAME,
+                /eregulations/http/password = CYPRESS_TEST_PASSWORD
+                /eregulations/http/admin_test_user = CYPRESS_TEST_ADMIN_USERNAME,
+                /eregulations/http/admin_test_password = CYPRESS_TEST_ADMIN_PASSWORD"
             withDecryption: "true" # defaults to true
       - name: end-to-end tests
         uses: cypress-io/github-action@v5
