--- a/.github/workflows/schedule-jira-sync.yml
+++ b/.github/workflows/schedule-jira-sync.yml
@@ -1,8 +1,8 @@
 name: Sync Security Hub findings and Jira issues
 on:
   workflow_dispatch: # for testing and manual runs
-  schedule:
-    - cron: "25 1 * * *" # daily at 6:25 am EST
+  # schedule:
+  #   - cron: "25 1 * * *" # daily at 6:25 am EST
 permissions:
   id-token: write
 jobs:
@@ -10,7 +10,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        environment: ["prod"]
+        environment: ["prod-secirty-hub"]
       fail-fast: false
     environment:
       name: ${{ matrix.environment }}
